# GLGE_BG

./: .gitignore  CMakeLists.txt  ConstexprHashmap.hpp  README.md  build.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
CBinding/: CBinding.h  Mutex.cpp  Mutex.h  String.cpp  String.h  Thread.cpp  Thread.h  Vector.cpp  Vector.h
Debugging/Logging/: Logging.h  __BG_SimpleDebug.h
Debugging/Timing/: Timer.cpp  Timer.h
SystemInfo/: SystemInfo.cpp  SystemInfo.h
src/: main.c
src/GLGEBg/: CommonDefines.h  GLGEBg.h
src/GLGEBg/CBinding/: Mutex.h  Thread.cpp  Thread.h  Vector.cpp  Vector.h
src/GLGEBg/Debugging/Logging/: Logger.cpp  Logger.h
src/GLGEBg/Debugging/Timing/: ScopeTimer.cpp  ScopeTimer.h  Timer.h  Timing.h
src/GLGEBg/SystemInfo/: SystemInfo.cpp  SystemInfo.h
